Added Memory Limitation Exploration